# FESOM2_Docker

./: README.md
.github/workflows/: docker-publish.yml
fesom2_ci/: Dockerfile  README.md
fesom2_ci/oasis/: .gitignore  CMakeLists.txt  LICENSE  README.md
fesom2_ci/oasis/lib/cbindings/: Makefile
fesom2_ci/oasis/lib/cbindings/c_src/: mod_oasis_auxiliary_routines_c.c  mod_oasis_getput_interface_c.c  mod_oasis_grid_c.c  mod_oasis_method_c.c  mod_oasis_part_c.c  mod_oasis_sys_c.c  mod_oasis_var_c.c  oasis_c.h  oasis_c_iso.h
fesom2_ci/oasis/lib/cbindings/fortran_isoc/: cbindings.F90  mod_oasis_auxiliary_routines_iso.F90  mod_oasis_getput_interface_iso.F90  mod_oasis_grid_iso.F90  mod_oasis_method_iso.F90  mod_oasis_part_iso.F90  mod_oasis_sys_iso.F90  mod_oasis_var_iso.F90
fesom2_ci/oasis/lib/mct/: README
fesom2_ci/oasis/lib/mct/mct/: CMakeLists.txt  m_AttrVectComms.F90  m_MatAttrVectMul.F90
fesom2_ci/oasis/lib/mct/mpeu/: CMakeLists.txt
fesom2_ci/oasis/lib/psmile/: CMakeLists.txt
fesom2_ci/oasis/lib/psmile/src/: GPTLget_memusage.c  Makefile  mod_oasis.F90  mod_oasis_advance.F90  mod_oasis_auxiliary_routines.F90  mod_oasis_coupler.F90  mod_oasis_data.F90  mod_oasis_error_reporting.F90  mod_oasis_getput_interface.F90  mod_oasis_grid.F90  mod_oasis_io.F90  mod_oasis_load_balancing.F90  mod_oasis_map.F90  mod_oasis_mem.F90  mod_oasis_method.F90  mod_oasis_mpi.F90  mod_oasis_namcouple.F90  mod_oasis_parameters.F90  mod_oasis_part.F90  mod_oasis_reprosum.F90  mod_oasis_sys.F90  mod_oasis_var.F90  mod_prism.F90  shr_reprosumx86.c
fesom2_ci/oasis/lib/scrip/src/: CMakeLists.txt  Makefile  grids.f90  netcdf.F90  remap_bi_interp.F90  remap_bicubic_reduced.F90  remap_conserv.F  remap_conserv.F90  remap_dist_gaus_wgt.F90  remap_locc_weight.F90  remap_vars.F90  remap_write.f  scrip.F90
fesom2_ci/oasis/pyoasis/: .gitignore  Makefile  readme.txt
fesom2_ci/oasis/pyoasis/docs/: conf.py  index.rst
fesom2_ci/oasis/pyoasis/src/: __init__.py  abort.py  asarray.py  checktypes.py  component.py  debug.py  exception.py  grid.py  mod_oasis_auxiliary_routines.py  mod_oasis_getput_interface.py  mod_oasis_grid.py  mod_oasis_method.py  mod_oasis_part.py  mod_oasis_sys.py  mod_oasis_var.py  parameters.py  partition.py  var.py
fesom2_ci/oasis/pyoasis/tests/: run_pytest.sh  test_pyoasis.py
fesom2_ci/oasis/util/load_balancing/: balancing_documentation.docx  lucia.json  lucia.yaml  pyLucia.py
fesom2_ci/oasis/util/make_dir/: Makefile.ece  TopMakefileOasis3  make.common  make.inc
fesom2_ci/oasis/util/make_dir/Makefile.d/: Makefile.config.ecconf.tmpl
fesom2_ci/xios/: .gitignore  bld.cfg  header_licence
fesom2_ci/xios/arch/: arch-BG_FERMI.path  arch-BG_TURING.env  arch-BG_TURING.fcm  arch-BULL_MISTRAL_intel_NetcdfParallel.env  arch-ESMTOOLS_generic_intel.path  arch-ESMTOOLS_generic_oasis_cray.fcm  arch-ESMTOOLS_generic_oasis_cray.path  arch-ESMTOOLS_generic_oasis_gcc.fcm  arch-ESMTOOLS_generic_oasisyac_cray.path  arch-ESMTOOLS_generic_oasisyac_intel.env  arch-ESMTOOLS_generic_oasisyac_intel.path  arch-ESMTOOLS_levante_oasis_intel.fcm  arch-ESMTOOLS_levante_oasis_intel.path  arch-ESMTOOLS_levante_oasisyac_intel.path  arch-GCC_LINUX.fcm  arch-GCC_MACOSX.fcm  arch-GCC_MACOSX.path  arch-HLRN4_intel_NetcdfParallel.env  arch-JURECA_intel.fcm  arch-JUWELS_intel.path.tmpl  arch-MesoPSL.fcm  arch-MesoPSL.path  arch-NESH_CLUSTER_intel.fcm  arch-NESH_CLUSTER_intel.path  arch-PW6_VARGAS.path  arch-X64_ADA.path  arch-X64_ATHENA.env  arch-X64_ATHENA.fcm  arch-X64_CURIE_GCC.fcm  arch-X64_CURIE_PGI.env  arch-X64_CURIE_PGI.path  arch-X64_CURIE_VAMPIR.fcm  arch-X64_HORUS.fcm  arch-X64_IRENE-ITAC.fcm  arch-X64_IRENE-ITAC.path  arch-X64_IRENE-SCOREP.env  arch-X64_IRENE.env  arch-X64_IRENE.fcm  arch-X64_JEANZAY.env  arch-X64_JEANZAY_PGI.env  (+11 more)
fesom2_ci/xios/src/: attribute.cpp  attribute.hpp  attribute_array_decl.cpp  attribute_enum.hpp  attribute_map.hpp  attribute_template_decl.cpp  attribute_template_impl.hpp  buffer_in.cpp  buffer_in.hpp  calendar.hpp  calendar_util.cpp  client.hpp  client_server_mapping.hpp  client_server_mapping_distributed.cpp  context_server.cpp  cxios.cpp  data_input.hpp  date.hpp  declare_attribute.hpp  declare_ref_func.hpp  declare_virtual_node.hpp  distribution.cpp  distribution_client.cpp  distribution_server.hpp  duration.hpp  event_client.cpp  event_client.hpp  event_scheduler.hpp  event_server.hpp  functor.cpp  generate_fortran_interface.cpp  generate_interface_decl.cpp  generate_interface_impl.hpp  graphviz.cpp  group_factory_decl.cpp  group_template_decl.cpp  indent_xml.hpp  memtrack.cpp  object.cpp  object.hpp  (+14 more)
fesom2_test/: Dockerfile  Readme.md
fesom2_test_refactoring/: Dockerfile  Readme.md
fesom2_test_refactoring/xios/: Doxyfile  Licence.txt  make_xios
fesom2_test_refactoring/xios/arch/: arch-BG_FERMI.env  arch-BG_TURING.path  arch-BULL_MISTRAL_intel_NetcdfParallel.fcm  arch-BULL_MISTRAL_intel_NetcdfParallel.path  arch-BULL_MISTRAL_intel_NetcdfParallel.path.tmpl  arch-CrayXC_intel_NetcdfParallel.fcm  arch-CrayXC_intel_NetcdfParallel.path.tmpl  arch-ESMTOOLS_ecmwf-atos_oasis_intel.path  arch-ESMTOOLS_ecmwf-atos_oasisyac_intel.path  arch-ESMTOOLS_generic_oasisyac_gcc.path  arch-ESMTOOLS_generic_oasisyac_intel.fcm  arch-ESMTOOLS_levante_oasisyac_intel.fcm  arch-GCC_LINUX.path  arch-HLRN4_intel_NetcdfParallel.fcm  arch-HLRN4_intel_NetcdfParallel.path.tmpl  arch-JURECA_intel.env  arch-JURECA_intel.path.tmpl  arch-MesoPSL.env  arch-NESH_CLUSTER_intel.path.tmpl  arch-PW6_VARGAS.fcm  arch-X64_ADA.fcm  arch-X64_ATHENA.path  arch-X64_CURIE.env  arch-X64_CURIE.path  arch-X64_CURIE_GCC.env  arch-X64_CURIE_PGI.fcm  arch-X64_CURIE_VAMPIR.env  arch-X64_CURIE_VAMPIR.path  arch-X64_IRENE-AMD.env  arch-X64_IRENE-ITAC.env  arch-X64_IRENE-SCOREP.fcm  arch-X64_JADE.fcm  arch-X64_JADE.path  arch-X64_JEANZAY.fcm  arch-X64_JEANZAY.path  arch-X64_JEANZAY_PGI.fcm  arch-X64_OCCIGEN.path  arch-X64_POINCARE.path  arch-X64_TITANE.fcm  arch-X64_TITANE.path  (+10 more)
fesom2_test_refactoring/xios/src/: array.hpp  array_mac.hpp  cxios.hpp  (+83 more)
one_day/: Dockerfile  Readme.md
pyfesom2/: Dockerfile  Readme.md
(+489 files in other folders)
